--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,6 @@
     "pages/home/home",
     "pages/index/index",
     "pages/userConsole/userConsole",
-    "pages/storageConsole/storageConsole",
     "pages/databaseGuide/databaseGuide",
     "pages/addFunction/addFunction",
     "pages/deployFunctions/deployFunctions",
@@ -13,7 +12,6 @@
     "pages/openapi/callback/callback",
     "pages/openapi/cloudid/cloudid",
     "pages/benediction/benediction",
-    "pages/fullpage/fullpage",
     "pages/message/message"
   ],
   "requiredBackgroundModes": [
@@ -41,13 +39,13 @@
         "pagePath": "pages/benediction/benediction",
         "iconPath": "../miniprogram/images/3.png",
         "selectedIconPath": "../miniprogram/images/4.png",
-        "text": "祝福爱心"
+        "text": "爱心祝福"
       },
       {
         "pagePath": "pages/message/message",
         "iconPath": "../miniprogram/images/1.png",
         "selectedIconPath": "../miniprogram/images/2.png",
-        "text": "祝福留言"
+        "text": "留言祝福"
       }
     ]
   },
