--- a/project.config.json
+++ b/project.config.json
@@ -41,8 +41,8 @@
 				},
 				{
 					"id": 1,
-					"name": "pages/message/message",
-					"pathName": "pages/message/message",
+					"name": "pages/home/home",
+					"pathName": "pages/home/home",
 					"query": "",
 					"scene": null
 				}
